complete with info

--- a/2019-01.md
+++ b/2019-01.md
@@ -20,14 +20,15 @@
 - Only on GitHub to then clone.
 - This is also necessary when we want to put an existing local repository in GitHub.
 
-1. Click up-right button on GitHub to make new repository with a markdown readme text (*.md) by default.
-2. `git init` to initiate .git repository locally in the desired folder.
-3. `git remote add [remote name] [repository address]`
-e.g. add origin git@github.com:arbarbeiro/notebook.git
+    1. Click up-right button on GitHub to make new repository with a markdown readme text (*.md) by default.
+    2. `git init` to initiate .git repository locally in the desired folder.
+    3. `git remote add [remote name] [repository address]`
+    e.g. add origin git@github.com:arbarbeiro/notebook.git
     Note: 'origin' is the [remore name] used by default  
-4. `git fetch` to see what is already in cloud.(also use git status to more info at any time).
-5. `git pull [remote name] [branch]` if there is any existing file, like a readme created by default, or if repository is empty, there is no need to pull.
-6. `git add [file name]` to add a new file to git to be tracked. 
-7. `git commit -m 'comment'` to ceate a git checkpoint (this is like a git save of changes done to the file). This is required before a git push to update these changes in the cloud repository.
-9. `git push origin master` to update the entire cloud repository with the locally one.
+    4. `git fetch` to see what is already in cloud.(also use git status to more info at any time).
+    5. `git pull [remote name] [branch]` if there is any existing file, like a readme created by default, or if repository is empty, there is no need to pull.
+    6. `git add [file name]` to add a new file to git to be tracked. 
+    7. `git commit -m 'comment'` to ceate a git checkpoint (this is like a git save of changes done to the file). This is required before a git push to update these changes in the cloud repository.
+    9. `git push origin master` to update the entire cloud repository with the locally one.
     Note: `git push --set-upstream origin master` to include [remote name] [branch]
+    10. `git commit -am [comment]` Once a file is added to be tracked, following changes can directly be added and commited with command.
